--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
                     <p>El colegio de Mexico No.1 en todo el continenete Americano.</p>
                 </frase>
             </center> 
-        </div>
-        <div class = "head">
-            <ul class="nav">
-                <li><a href="inicio.html">INCIO</a></li>
-                <li><a href="ofrecemos.html">OFRECEMOS</a></li>  
-                <li><a href="requisitos.html">REQUISITOS</a></li>   
-                <li><a href="ubicaciones.html">UBICACIONES</a></li>
-                <li><a href="inscribir.html">INSCRIBIR</a></li>
-            </ul>
-        </div>
-        
+            <div class = "head">
+                <ul class="nav">
+                    <li><a href="inicio.html">INCIO</a></li>
+                    <li><a href="ofrecemos.html">OFRECEMOS</a></li>  
+                    <li><a href="requisitos.html">REQUISITOS</a></li>   
+                    <li><a href="ubicaciones.html">UBICACIONES</a></li>
+                    <li><a href="inscribir.html">INSCRIBIR</a></li>
+                    <li><a href="buscarEstudiante.html">BUSCAR</a></li>
+                </ul>
+            </div>
+        </div>  
         <div class = "footer">
             <ul class = "nal">
                 <li class = "op"><a href="conocenos.html">Conocenos</a>
