--- a/ofrecemos.html
+++ b/ofrecemos.html
@@ -30,38 +30,38 @@
                     <p>El colegio de Mexico No.1 en todo el continenete Americano.</p>
                 </frase>
             </center> 
+            <div class = "head">
+                <ul class="nav">
+                    <li><a href="inicio.html">INCIO</a></li>
+                    <li><a href="ofrecemos.html">OFRECEMOS</a</li>
+                    <li><a href="requisitos.html">REQUISITOS</a></li>
+                    <li><a href="ubicaciones.html">UBICACIONES</a></li>
+                    <li><a href="inscribir.html">INSCRIBIR</a></li>
+                    <li><a href="buscarEstudiante.html">BUSCAR</a></li>
+                </ul>
+                <div class="block">
+                    <img class = "salon" src="Salon.jpg" alt="imagen"width= "450px" height="350px">
+                    <div class = "data">
+                        <div class = "tittle">
+                            <p><p>En nuestro colegio nos comprometemos a brindar una educacion integral que fomente tanto el desarrollo academico como personal de nuestros estudiantes.</p></p>
+                        </div>
+                        <div class = "info">
+                            <p>• Contamos con kinder, primaria, secundaria, preparatoria y universidad, separados por secciones.</p>
+                            <p>• Educacion de calidad, docentes altamente capacitados comprometidos. </p>
+                            <p>• Integramos equipo moderno de ultima tecnologia en el proceso de enseñanza y con eso alojamiento para estudiantes de universidad.</p>
+                            <p>• incluimos actividades extracurriculares, para desarrollar diferentes habilidades en los alumnos y permitir su expresion.</p>
+                            <p>• Tomamos en cuenta el ambiente escolar, prometemos asegurar un ambiente inclusivo, respuetuoso y de confianza.</p>
+                            <p>• Nuestro programa prepara a los estudiantes para el futuro.</p>
+                        </div>
+                    </div>    
+                </div>
+            </div>
         </div>
         
         <div class = "return">
             <ul class ="nab">
                 <li><a href="index.html">Menu</a></li>
             </ul>
-        </div>
-
-        <div class = "head">
-            <ul class="nav">
-                <li><a href="inicio.html">INCIO</a></li>
-                <li><a href="ofrecemos.html">OFRECEMOS</a</li>
-                <li><a href="requisitos.html">REQUISITOS</a></li>
-                <li><a href="ubicaciones.html">UBICACIONES</a></li>
-                <li><a href="inscribir.html">INSCRIBIR</a></li>
-            </ul>
-        </div>
-        <div class="block">
-            <img class = "salon" src="Salon.jpg" alt="imagen"width= "450px" height="350px">
-            <div class = "data">
-                <div class = "tittle">
-                    <p><p>En nuestro colegio nos comprometemos a brindar una educacion integral que fomente tanto el desarrollo academico como personal de nuestros estudiantes.</p></p>
-                </div>
-                <div class = "info">
-                    <p>• Contamos con kinder, primaria, secundaria, preparatoria y universidad, separados por secciones.</p>
-                    <p>• Educacion de calidad, docentes altamente capacitados comprometidos. </p>
-                    <p>• Integramos equipo moderno de ultima tecnologia en el proceso de enseñanza y con eso alojamiento para estudiantes de universidad.</p>
-                    <p>• incluimos actividades extracurriculares, para desarrollar diferentes habilidades en los alumnos y permitir su expresion.</p>
-                    <p>• Tomamos en cuenta el ambiente escolar, prometemos asegurar un ambiente inclusivo, respuetuoso y de confianza.</p>
-                    <p>• Nuestro programa prepara a los estudiantes para el futuro.</p>
-                </div>
-            </div>    
         </div>
         <div class = "footer">
             <ul class = "nal">
