--- a/requisitos.html
+++ b/requisitos.html
@@ -30,6 +30,33 @@
                     <p>El colegio de Mexico No.1 en todo el continenete Americano.</p>
                 </frase>
             </center> 
+            <div class = "head">
+                <ul class="nav">
+                    <li><a href="inicio.html">INCIO</a></li>
+                    <li><a href="ofrecemos.html">OFRECEMOS</a</li>
+                    <li><a href="requisitos.html">REQUISITOS</a></li>
+                    <li><a href="ubicaciones.html">UBICACIONES</a></li>
+                    <li><a href="inscribir.html">INSCRIBIR</a></li>
+                    <li><a href="buscarEstudiante.html">BUSCAR</a></li>
+                </ul>
+                <div class="block">
+                    <img class = "requi" src="requisitos.jpg" alt="imagen"width= "450px" height="350px">
+                    <div class = "data">
+                        <div class = "tittle">
+                            <p>Se deben cumplir una serie de requisitos obligatorios para considerar la admision de su hijo</p>
+                        </div>
+                        <div class = "info">
+                            <p>• Los padres y/o el estudiante deberan llenar un Formulario de inscripcion.</p>
+                            <p>• Se necesita certificado de estudios previos si viene de otra institucion, con un promedio mayor a 9. Si empieza de 0 no es necesario y si viene de aqui, solo con la nota minima 6</p>
+                            <p>• Habra entrevista con el estudiante y padres o tutores.</p>
+                            <p>• Tendra que hacer un examen de admision si viene de otra institucion, sino solo sera un examen diagnostico.</p>
+                            <p>• Firmar y estar en compromiso con el reglamento del colegio.</p>
+                            <p>• Hacer una jornada de induccion para conocer la instalaciones y los docentes.</p>
+                            <p>• Debera pagar la inscripcion y una mensualidad de $1200.</p>
+                        </div>
+                    </div>        
+                </div>
+            </div>
         </div>
         
         <div class = "return">
@@ -38,32 +65,6 @@
             </ul>
         </div>
 
-        <div class = "head">
-            <ul class="nav">
-                <li><a href="inicio.html">INCIO</a></li>
-                <li><a href="ofrecemos.html">OFRECEMOS</a</li>
-                <li><a href="requisitos.html">REQUISITOS</a></li>
-                <li><a href="ubicaciones.html">UBICACIONES</a></li>
-                <li><a href="inscribir.html">INSCRIBIR</a></li>
-            </ul>
-        </div>
-        <div class="block">
-            <img class = "requi" src="requisitos.jpg" alt="imagen"width= "450px" height="350px">
-            <div class = "data">
-                <div class = "tittle">
-                    <p>Se deben cumplir una serie de requisitos obligatorios para considerar la admision de su hijo</p>
-                </div>
-                <div class = "info">
-                    <p>• Los padres y/o el estudiante deberan llenar un Formulario de inscripcion.</p>
-                    <p>• Se necesita certificado de estudios previos si viene de otra institucion, con un promedio mayor a 9. Si empieza de 0 no es necesario y si viene de aqui, solo con la nota minima 6</p>
-                    <p>• Habra entrevista con el estudiante y padres o tutores.</p>
-                    <p>• Tendra que hacer un examen de admision si viene de otra institucion, sino solo sera un examen diagnostico.</p>
-                    <p>• Firmar y estar en compromiso con el reglamento del colegio.</p>
-                    <p>• Hacer una jornada de induccion para conocer la instalaciones y los docentes.</p>
-                    <p>• Debera pagar la inscripcion y una mensualidad de $1200.</p>
-                </div>
-            </div>        
-        </div>
         <div class = "footer">
             <ul class = "nal">
                 <li class = "op"><a href="conocenos.html">Conocenos</a>
