--- a/ubicaciones.html
+++ b/ubicaciones.html
@@ -30,6 +30,33 @@
                     <p>El colegio de Mexico No.1 en todo el continenete Americano.</p>
                 </frase>
             </center> 
+            <div class = "head">
+                <ul class="nav">
+                    <li><a href="inicio.html">INCIO</a></li>
+                    <li><a href="ofrecemos.html">OFRECEMOS</a</li>
+                    <li><a href="requisitos.html">REQUISITOS</a></li>
+                    <li><a href="ubicaciones.html">UBICACIONES</a></li>
+                    <li><a href="inscribir.html">INSCRIBIR</a></li>
+                    <li><a href="buscarEstudiante.html">BUSCAR</a></li>
+                </ul>
+                <div class="block">
+                    <img class = "ubi" src="ubicacion.jpg" alt="imagen"width= "450px" height="350px">
+                    <div class = data>
+                        <div class = "tittle">
+                            <p>Conozca las ubicaciones de nuestros colegios, para que pueda acudir a uno por si desea ingresar usted o su hijo.</p>
+                        </div>
+                        <div class = "info">
+                            <p>Conozca las ubicaciones de nuestros colegios, para que pueda acudir a uno por si desea ingresar usted o su hijo.</p>
+                            <p>• Av.San Miguel #50, Morelia, Michoacan.</p>
+                            <p>• Av.Cordoba #3, Guadalajara, Jalisco.</p>
+                            <p>• Km 33, Monterrey, Nuevo Leon.</p>
+                            <p>• Av.Jose Morelos #15, Ciudad de Mexico.</p>
+                            <p>• Km 11, Queretaro, Queretaro.</p>
+                            <p>• Av. Villa Verde #8, Cancun, Quintana Roo.</p>
+                        </div>
+                    </div>  
+                </div>
+            </div>
         </div>
         
         <div class = "return">
@@ -38,32 +65,6 @@
             </ul>
         </div>
 
-        <div class = "head">
-            <ul class="nav">
-                <li><a href="inicio.html">INCIO</a></li>
-                <li><a href="ofrecemos.html">OFRECEMOS</a</li>
-                <li><a href="requisitos.html">REQUISITOS</a></li>
-                <li><a href="ubicaciones.html">UBICACIONES</a></li>
-                <li><a href="inscribir.html">INSCRIBIR</a></li>
-            </ul>
-        </div>
-        <div class="block">
-            <img class = "ubi" src="ubicacion.jpg" alt="imagen"width= "450px" height="350px">
-            <div class = data>
-                <div class = "tittle">
-                    <p>Conozca las ubicaciones de nuestros colegios, para que pueda acudir a uno por si desea ingresar usted o su hijo.</p>
-                </div>
-                <div class = "info">
-                    <p>Conozca las ubicaciones de nuestros colegios, para que pueda acudir a uno por si desea ingresar usted o su hijo.</p>
-                    <p>• Av.San Miguel #50, Morelia, Michoacan.</p>
-                    <p>• Av.Cordoba #3, Guadalajara, Jalisco.</p>
-                    <p>• Km 33, Monterrey, Nuevo Leon.</p>
-                    <p>• Av.Jose Morelos #15, Ciudad de Mexico.</p>
-                    <p>• Km 11, Queretaro, Queretaro.</p>
-                    <p>• Av. Villa Verde #8, Cancun, Quintana Roo.</p>
-                </div>
-            </div>  
-        </div>
         <div class = "footer">
             <ul class = "nal">
                 <li class = "op"><a href="conocenos.html">Conocenos</a>
