--- a/inscribir.html
+++ b/inscribir.html
@@ -51,6 +51,7 @@
                     <input class = "resgis" type="text" name="nacion" id = "nacion" placeholder="Nacionalidad">
                     <input class = "resgis" type="domiE" name="domiE" id = "nacion" placeholder="Domicilio">
                     <input class = "resgis" type="text" name="numTe" id = "numTe" placeholder="Numero de telefono (opcional)">
+                    <input class = "resgis" type="text" name="cursoE" id = "cursoE" placeholder="Curso al que ingresa">
                     <input class = "resgis" type="text" name="gradoE" id = "gradoE" placeholder="Grado al que ingresa">
                     <input class = "resgis" type="text" name="escuelaE" id = "escuelaE" placeholder="Escuela de provenencia">      
                 </center> 
